@@ -1,5 +1,12 @@
 2005-11-08  Laurent Sansonetti  <lrz@gnome.org>
 
+	* data/alexandria/glade/new_book_dialog.glade,
+	  lib/alexandria/ui/new_book_dialog.rb:
+
+	- Properly kill active threads when destroying the window and starting a
+	  new search ;
+	- Disable the whole window while searching.
+
 	* AUTHORS,
 	  lib/alexandria.rb:
 
